# OTGuard-MVP-v1.0

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.en.md  README.md  README.ru.md  README.tr.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
docs/: EULA.md  architecture.md  features-en.md  features-ru.md  features-tr.md  getting-started.en.md  getting-started.md  getting-started.ru.md  module-dev-guide.md
docs/media/: README.md
docs/media/diagrams/: architecture.mmd  dataflow.mmd
docs/media/images/: .gitkeep
docs/policy/: org-approval.en.md  org-approval.md  org-approval.ru.md
docs/projects/SH-PT-2024-Q1/: plan.md
framework/bundled/modules/examples/aux_nmap_import/: module.py
framework/cli/: main.py
framework/core/automation/: resource_runner.py
framework/core/metrics/: collector.py  logger.py
framework/core/modules/: base.py  loader.py  manifest.py
framework/core/notify/: emailer.py  webhook.py
framework/core/policy/: org_gate.py  org_server.py  report_gate.py
framework/core/report/: generator.py
framework/core/safety/: guardrails.py
framework/core/sessions/: base.py  docker.py  docker_runtime.py  local.py  store.py
modules/examples/aux_nmap_import/: module.yaml
modules/examples/post_collect_sysinfo/: module.py  module.yaml
modules/examples/probe_portscan/: module.py  module.yaml
resources/examples/: quick_probe.yaml
tests/unit/: test_guardrails.py  test_loader.py  test_report.py  test_resource_runner.py
