[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-sec-framework"
version = "0.1.0"
description = "A safe, modular security testing framework scaffold (lab-only by default)."
authors = [{name = "Your Team"}]
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0.1",
  "rich>=13.7",
]

[project.scripts]
framework = "framework.cli.main:app"