[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-sec-framework"
version = "1.0.0"
description = "A safe, modular security testing framework scaffold (lab-only by default)."
authors = [{name = "Your Team"}]
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0.1",
  "rich>=13.7",
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
]
urls = { 
  "Homepage" = "https://github.com/your-org/lab-sec-framework",
  "Repository" = "https://github.com/your-org/lab-sec-framework",
  "Issues" = "https://github.com/your-org/lab-sec-framework/issues"
}

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "build>=1.2.1",
]

[project.scripts]
framework = "framework.cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["framework*"]

[tool.setuptools.package-data]
framework = ["bundled/**/*"]